Fixed wrong positioning of responsive toolbar [FIXES #59906742]

--- a/app/assets/stylesheets/relaunch/_toolbar.css.scss
+++ b/app/assets/stylesheets/relaunch/_toolbar.css.scss
@@ -9,7 +9,8 @@
   @include box-shadow(0px 0px 10px #444, inset 0px 2px 6px #000);
 
   @media screen and (max-width: $breakTablet) {
-    position: fixed;
+    position: absolute;
+    top: auto;
     left: 0px;
     bottom: 0px;
     @include box-shadow(none);
